Fix layout issues

--- a/static/css/_about.css
+++ b/static/css/_about.css
@@ -5,7 +5,7 @@
 }
 
 .about-left {
-    height: auto;
+    height: 100vh;
     background-color: var(--beige);
     color: var(--black) !important;
 }
